--- a/Rapport2/introduction.tex
+++ b/Rapport2/introduction.tex
@@ -1,1 +1,1 @@
-In this report we will discuss how we implemented and benchmarked the four different streams from the project description. We will then use the best stream in external mergesort. Different parameters will be examined in order to optimize the running time of sorting and for comparison with in-memory sorting algorithms.
+In this report we will discuss how we implemented and benchmarked the external heap and the different underlysing streams. Different parameters and algorithm variations will be examined in order to optimize the running time of sorting and for comparison with in-memory sorting algorithms and the external mergesort.
