--- a/Rapport2/test_setup.tex
+++ b/Rapport2/test_setup.tex
@@ -1,3 +1,4 @@
+%!TEX root = rapport.tex
 All measurements presented in this report were performed on a computer
 with an Intel Core i3-380UM CPU with the following technical
 specifications:
