--- a/Rapport2/implementation.tex
+++ b/Rapport2/implementation.tex
@@ -3,6 +3,8 @@ This section will present implementation details on how the heap has
 been implemented, and how these choices were made. Also the details of
 all the implemented streams are discussed.
 
+% TODO: Hoejde, husk insert buffer der jo ikke bliver lagt paa disk!
+
 \subsection{Heap parameters}
 \label{sec:implementation:parameters}
 \begin{itemize}
