--- a/Rapport2/test_setup.tex
+++ b/Rapport2/test_setup.tex
@@ -26,3 +26,5 @@ code was compiled using the \texttt{-O3 -flto -funroll-loops}
 optimization flags.
 
 The variations between several runs were insignificant so we choose to run all tests once to be able to run as many configurations as possible.
+
+% TODO: Hvordan vi har maalt IO'er
