--- a/Project2/measurements/todo.txt
+++ b/Project2/measurements/todo.txt
@@ -1,4 +1,2 @@
-1. Test at der ikke er forskel for den nye version
-2. Test de memory mapped der fejlede
-3. Test med mindre blokstoerrelser og hoejde begraesning
-3. Test de andre streams
+1. Test med d = V/P
+2. Test sift variation med go uden opt.
